refactor Commander to protos
