# api/schema.go
@@ -1,39 +1,7 @@
 package api
 
-// Reduce schema within fake based on schemaReducer
-func (sch *Schema) Reduce(reduction ...Reduction) (out interface{}) {
-	if len(reduction) < 1 {
-		return
-	}
-	level := reduction[0]
-	fake := &FakeSchema{}
-	out = fake
-
-	// always include links
-	fake.Items = sch.Items
-	fake.OneOf = sch.OneOf
-	fake.Properties = sch.Properties
-
-	fake.Name = sch.Name
-	fake.Type = sch.Type
-	if level == Brief {
-		return
-	}
-
-	fake.Description = sch.Description
-	fake.Options = sch.Options
-	if level == Summary {
-		return
-	}
-
-	fake.Title = sch.Title
-	fake.UniqueItems = sch.UniqueItems
-	fake.Required = sch.Required
-	return
-}
-
-// FakeSchema -
-type FakeSchema struct {
+// SchemaYAML -
+type SchemaYAML struct {
 	Title       string    `yaml:"Title,omitempty" json:"Title,omitempty" xml:"Title,omitempty"`
 	Name        string    `yaml:"Name,omitempty" json:"Name,omitempty" xml:"Name,omitempty"`
 	Type        string    `yaml:"Type,omitempty" json:"Type,omitempty" xml:"Type,omitempty"`
@@ -44,4 +12,34 @@ type FakeSchema struct {
 	Options     []string  `yaml:"Options,omitempty" json:"Options,omitempty" xml:"Options,omitempty"`
 	OneOf       []*Schema `yaml:"OneOf,omitempty" json:"OneOf,omitempty" xml:"OneOf,omitempty"`
 	Properties  []*Schema `yaml:"Properties,omitempty" json:"Properties,omitempty" xml:"Properties,omitempty"`
+}
+
+// Reduce schema within fake based on schemaReducer
+func (sch *Schema) Reduce(projection ...Projection) (out interface{}) {
+	out = sch
+	if len(projection) < 1 {
+		return
+	}
+	level := projection[0]
+	if level == Projection_FULL {
+		return
+	}
+
+	yaml := &SchemaYAML{}
+	out = yaml
+
+	// always include links
+	yaml.Items = sch.Items
+	yaml.OneOf = sch.OneOf
+	yaml.Properties = sch.Properties
+
+	yaml.Name = sch.Name
+	yaml.Type = sch.Type
+	if level == Projection_BRIEF {
+		return
+	}
+
+	yaml.Description = sch.Description
+	yaml.Options = sch.Options
+	return
 }
